# geomqtt

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROTOCOL.md  README.md  docker-compose.yml  docker-stack.yml  package.json
.github/workflows/: ci.yml  npm.yml  pages.yml  release.yml  tests.yml
Runtime/: TileMath.cs  Types.cs
bench/: .gitignore  Dockerfile  README.md  __init__.py  __main__.py  docker-compose.bench.yml  docker-compose.multinode-10.yml  docker-compose.multinode.yml  requirements.txt
bench/scenarios/: __init__.py  common.py  cross_node.py  fanout.py  snapshot_burst.py  viewport_churn.py  write_rate.py
clients/: README.md  package-lock.json  package.json  tsconfig.base.json
clients/geomqtt-core/: package.json  vitest.config.ts
clients/geomqtt-core/src/: client.ts  config.ts  coord.ts  index.ts  types.ts  viewport.ts
clients/geomqtt-core/tests/: coord.test.ts  viewport.test.ts
clients/geomqtt-leaflet/: package.json
clients/geomqtt-leaflet/src/: index.ts
clients/geomqtt-maplibre/: package.json
clients/geomqtt-unity/: README.md  package.json
clients/geomqtt-unreal/: Geomqtt.uplugin  README.md
crates/geomqtt-server/: Cargo.toml
crates/geomqtt-server/src/: broker.rs  config.rs  coord.rs  fanout.rs  http.rs  influx.rs  main.rs  metrics.rs  mqtt.rs  payload.rs  redis.rs  resp.rs
crates/geomqtt-server/tests/: integration.rs
examples/iss-demo/: Dockerfile  README.md  iss-demo.sh
examples/web-iss/: README.md  build.mjs  index.html  package.json  tsconfig.json
(+21 files in other folders)
