[package]
name = "geomqtt-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "geomqtt-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
fred = { version = "10", features = ["i-geo", "subscriber-client"] }
redis-protocol = { version = "6", features = ["bytes"] }
mqttbytes = "0.6"
parking_lot = "0.12"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
rumqttc = "0.24"
